ADD: the Sections

--- a/index.html
+++ b/index.html
@@ -1,12 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Mountain</title>
-    <link rel="stylesheet" href="./css/output.css">
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/output.css" />
+  </head>
+  <body>
+    <header id="home" class="bg-header p-10 text-primary-white">
+      <nav class="flex flex-row justify-between">
+        <img src="./images/your_logo.png" alt="Logo" class="w-[40%]" />
+        <img src="./images/menus.png" alt="Menu" class="w-[10%]" />
+      </nav>
+      <div class="flex flex-col mt-[100px] text-center justify-center">
+        <h1 class="text-[45px] font-heading">
+          In the hall of the
+          <span class="font-bold text-[50px]">Mountain King</span>
+        </h1>
+        <p class="mt-10 text-[30px] font-paragraph">
+          This is a simple hero unit, a simple jumbotron-style component fot
+          calling extra attention to featured content or information.
+        </p>
+        <div class="flex flex-col text-[20px] font-paragraph items-center mt-5">
+          <a href="#" class="bg-primary-blue w-[50%] p-4">Learn more</a>
+          <a href="#" class="bg-primary-pink w-[40%] p-4">Download</a>
+        </div>
+      </div>
+    </header>
+
+    <!-- Features Section  -->
+    <section
+      id="features"
+      class="flex flex-col bg-primary-white p-4 mt-[50px] gap-11 text-primary-gray"
+    >
+      <article class="flex flex-col text-center items-center gap-4">
+        <img src="./images/crayon.png" alt="Pen" class="w-[20%]" />
+        <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
+        <p class="text-[17px] font-paragraph">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
+          nesciunt nobis quisquam? Voluptates quasi tempore recusandae suscipit
+          aut. Totam, possimus ad? Repellendus veritatis non deleniti optio,
+          quidem quasi? Enim, eos.
+        </p>
+      </article>
+      <article class="flex flex-col text-center items-center gap-4">
+        <img src="./images/camera.png" alt="Pen" class="w-[20%]" />
+        <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
+        <p class="text-[17px] font-paragraph">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
+          nesciunt nobis quisquam? Voluptates quasi tempore recusandae suscipit
+          aut. Totam, possimus ad? Repellendus veritatis non deleniti optio,
+          quidem quasi? Enim, eos.
+        </p>
+      </article>
+      <article class="flex flex-col text-center items-center gap-4">
+        <img src="./images/document.png" alt="Pen" class="w-[20%]" />
+        <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
+        <p class="text-[17px] font-paragraph">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
+          nesciunt nobis quisquam? Voluptates quasi tempore recusandae suscipit
+          aut. Totam, possimus ad? Repellendus veritatis non deleniti optio,
+          quidem quasi? Enim, eos.
+        </p>
+      </article>
+    </section>
+
+    <!-- About Section  -->
+    <section class="flex flex-col bg-about items-center">
+        <div class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7">
+            <h2 class="text-primary-white-light text-[37px] font-heading">Ligual Mattis Ornare Ultricies</h2>
+            <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
+            <p class="text-[20px]">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus officiis asperiores enim recusandae delectus, mollitia animi deserunt natus quaerat aliquid?
+            </p>
+            <div class="flex flex-col items-center">
+                <div class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px]">
+                    <h3>Ultricies</h3>
+                    <p>23,578</p>
+                </div>
+            </div> 
+            <div class="flex flex-col items-center">
+                <div class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px]">
+                    <h3>Fermentum</h3>
+                    <p>12,702</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Blog Section  -->
+    <section class="flex flex-col bg-primary-white p-4 text-primary-gray mt-10">
+        <h2 class="text-[35px] font-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <p class="mt-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, repellendus hic reprehenderit, dolore cupiditate quasi laboriosam praesentium minima vitae veniam culpa fugit modi quae laudantium odit explicabo aliquam est iste! Itaque fugiat, animi maxime cumque numquam rerum porro magnam tempore.
+        </p>
+        <p class="mt-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, repellendus hic reprehenderit, dolore cupiditate quasi laboriosam praesentium minima vitae veniam culpa fugit modi quae laudantium odit explicabo aliquam est iste! Itaque fugiat, animi maxime cumque numquam rerum porro magnam tempore.
+        </p>
+        <a href="#" class="bg-primary-pink text-primary-white w-[163px] p-4 text-[20px] mt-5">
+            <div class="flex flex-row gap-2">
+                <p>Take a Look</p>
+                <img src="./images/deconnexion.png" alt="#" class="w-[20px]">
+            </div>
+        </a>
+        <img src="./images/1200.jpeg" alt="#">
+    </section>
+
+    <!-- History Section  -->
+    <section class="flex flex-col bg-history items-center mt-[30px]">
+        <div class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7">
+            <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
+            <p class="text-[20px]">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus officiis asperiores enim recusandae delectus, mollitia animi deserunt natus quaerat aliquid?
+            </p>
+            <p class="text-[20px]">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus officiis asperiores enim recusandae delectus, mollitia animi deserunt natus quaerat aliquid?
+            </p>
+            <p class="text-[20px]">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus officiis asperiores enim recusandae delectus, mollitia animi deserunt natus quaerat aliquid?
+            </p>
+        </div>
+    </section>
+
+    <!-- Photos Section -->
+     <section class="flex flex-col bg-gray-300 pt-[50px] gap-3 pb-11">
+        <img src="./images/300.jpeg" alt="#" class="w-[100%]">
+        <img src="./images/776.jpeg" alt="#" class="w-[100%]">
+        <img src="./images/800.jpeg" alt="#" class="w-[100%]">
+        <img src="./images/400.jpeg" alt="#" class="w-[100%]">
+        <img src="./images/2476.jpeg" alt="#" class="w-[100%]">
+        <img src="./images/439.jpeg" alt="#" class="w-[100%]">
+        <img src="./images/140.jpeg" alt="#" class="w-[100%]">
+     </section>
+
+     <!-- Partenaires Section -->
+      <section class="p-3">
+        <img src="./images/logo-sample-01.jpg" alt="#" class="w-[100%]">
+        <img src="./images/logo-sample-02.jpg" alt="#" class="w-[100%]">
+        <img src="./images/logo-sample-03.png" alt="#" class="w-[100%]">
+        <img src="./images/logo-sample-04.jpg" alt="#" class="w-[100%]">
+        <img src="./images/logo-sample-05.jpg" alt="#" class="w-[100%]">
+        <img src="./images/logo-sample-06.png" alt="#" class="w-[100%]">
+      </section>
+  </body>
 </html>
