--- a/index.html
+++ b/index.html
@@ -13,165 +13,268 @@
     <link rel="stylesheet" href="./css/output.css" />
   </head>
   <body>
-    <header id="home" class="bg-header p-10 text-primary-white md:h-[100vh] bg-center bg-cover">
+    <header
+      id="home"
+      class="bg-header px-10 pt-5 text-primary-white md:h-[100vh] bg-center bg-cover xl:pt-10"
+    >
       <div class="flex flex-col items-center">
         <nav class="flex flex-row justify-between">
           <div class="flex flex-row items-center">
-            <img src="./images/your_logo.png" alt="Logo" class="w-[40%] md:w-[50%] xl:w-[30%]" />
+            <img
+              src="./images/your_logo.png"
+              alt="Logo"
+              class="w-[40%] md:w-[50%] xl:w-[30%]"
+            />
             <p class="text-black text-[20px] md:text-[40px]">LOGO</p>
           </div>
-          <img src="./images/menus.png" alt="Menu" class="w-[10%] md:h-[3%] md:w-[5%] xl:w-[4%]" />
+          <img
+            src="./images/menus.png"
+            alt="Menu"
+            class="w-[10%] md:h-[3%] md:w-[5%] xl:w-[4%]"
+          />
         </nav>
-        <div class="flex flex-col mt-[100px] text-center md:w-[80%]">
+        <div class="flex flex-col mt-[100px] text-center md:w-[80%] xl:w-[50%]">
           <h1 class="text-[45px] font-heading">
             In the hall of the
-            <span class="font-bold text-[50px] md:text-[70px]">Mountain King</span>
+            <span class="font-bold text-[50px] md:text-[70px]"
+              >Mountain King</span
+            >
           </h1>
         </div>
-        <div class="flex flex-col text-center md:w-[90%]">
+        <div class="flex flex-col text-center md:w-[90%] xl:w-[50%]">
           <p class="mt-10 text-[30px] font-paragraph md:text-[20px]">
             This is a simple hero unit, a simple jumbotron-style component fot
             calling extra attention to featured content or information.
           </p>
-          <div class="flex flex-col text-[20px] font-paragraph items-center mt-5 md:flex-row md:justify-center md:gap-3 md:mt-10">
-            <a href="#" class="bg-primary-blue w-[50%] p-4 md:w-[30%]">Learn more</a>
-            <a href="#" class="bg-primary-pink w-[40%] p-4 md:w-[30%]">Download</a>
+          <div
+            class="flex flex-col text-[20px] font-paragraph items-center mt-5 md:flex-row md:justify-center md:gap-3 md:mt-10"
+          >
+            <a href="#" class="bg-primary-blue w-[50%] p-4 md:w-[30%]"
+              >Learn more</a
+            >
+            <a href="#" class="bg-primary-pink w-[40%] p-4 md:w-[30%]"
+              >Download</a
+            >
           </div>
         </div>
       </div>
     </header>
 
     <!-- Features Section  -->
-    <section
-      id="features"
-      class="flex flex-col bg-primary-white p-4 mt-[50px] gap-11 text-primary-gray"
-    >
-      <article class="flex flex-col text-center items-center gap-4">
-        <img src="./images/crayon.png" alt="Pen" class="w-[20%] md:w-[10%]" />
-        <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
-        <p class="text-[17px] font-paragraph">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
-          nesciunt nobis quisquam? Voluptates quasi tempore recusandae suscipit
-          aut. Totam, possimus ad? Repellendus veritatis non deleniti optio,
-          quidem quasi? Enim, eos.
-        </p>
-      </article>
-      <article class="flex flex-col text-center items-center gap-4">
-        <img src="./images/camera.png" alt="Pen" class="w-[20%] md:w-[10%]" />
-        <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
-        <p class="text-[17px] font-paragraph">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
-          nesciunt nobis quisquam? Voluptates quasi tempore recusandae suscipit
-          aut. Totam, possimus ad? Repellendus veritatis non deleniti optio,
-          quidem quasi? Enim, eos.
-        </p>
-      </article>
-      <article class="flex flex-col text-center items-center gap-4">
-        <img src="./images/document.png" alt="Pen" class="w-[20%] md:w-[10%]" />
-        <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
-        <p class="text-[17px] font-paragraph">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
-          nesciunt nobis quisquam? Voluptates quasi tempore recusandae suscipit
-          aut. Totam, possimus ad? Repellendus veritatis non deleniti optio,
-          quidem quasi? Enim, eos.
-        </p>
-      </article>
+    <section class="flex justify-center">
+      <div
+        id="features"
+        class="flex flex-col bg-primary-white p-4 mt-[50px] gap-11 text-primary-gray xl:flex-row xl:items-center xl:w-[80%] xl:mb-[50px]"
+      >
+        <article
+          class="flex flex-col text-center items-center gap-4 xl:w-[30%]"
+        >
+          <img src="./images/crayon.png" alt="Pen" class="w-[20%] md:w-[10%] xl:w-[15%]" />
+          <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
+          <p class="text-[17px] font-paragraph">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
+            nesciunt nobis quisquam? Voluptates quasi tempore recusandae
+            suscipit aut. Totam, possimus ad? Repellendus veritatis non deleniti
+            optio, quidem quasi? Enim, eos.
+          </p>
+        </article>
+        <article
+          class="flex flex-col text-center items-center gap-4 xl:w-[30%]"
+        >
+          <img src="./images/camera.png" alt="Pen" class="w-[20%] md:w-[10%] xl:w-[15%]" />
+          <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
+          <p class="text-[17px] font-paragraph">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
+            nesciunt nobis quisquam? Voluptates quasi tempore recusandae
+            suscipit aut. Totam, possimus ad? Repellendus veritatis non deleniti
+            optio, quidem quasi? Enim, eos.
+          </p>
+        </article>
+        <article
+          class="flex flex-col text-center items-center gap-4 xl:w-[30%]"
+        >
+          <img
+            src="./images/document.png"
+            alt="Pen"
+            class="w-[20%] md:w-[10%] xl:w-[15%]"
+          />
+          <h2 class="text-[35px] font-heading">Consectetur Risus</h2>
+          <p class="text-[17px] font-paragraph">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis
+            nesciunt nobis quisquam? Voluptates quasi tempore recusandae
+            suscipit aut. Totam, possimus ad? Repellendus veritatis non deleniti
+            optio, quidem quasi? Enim, eos.
+          </p>
+        </article>
+      </div>
     </section>
-
     <!-- About Section  -->
-    <section class="flex flex-col bg-about items-center">
-        <div class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7">
-            <h2 class="text-primary-white-light text-[37px] font-heading">Ligual Mattis Ornare Ultricies</h2>
-            <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
-            <p class="text-[20px]">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus officiis asperiores enim recusandae delectus, mollitia animi deserunt natus quaerat aliquid?
-            </p>
-            <div class="flex flex-col items-center">
-                <div class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px]">
-                    <h3>Ultricies</h3>
-                    <p>23,578</p>
-                </div>
-            </div> 
-            <div class="flex flex-col items-center">
-                <div class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px]">
-                    <h3>Fermentum</h3>
-                    <p>12,702</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Blog Section  -->
-    <section class="flex flex-col bg-primary-white p-4 text-primary-gray mt-10">
-        <h2 class="text-[35px] font-heading md:text-[40px]">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
-        <p class="mt-5 md:text-[20px]">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, repellendus hic reprehenderit, dolore cupiditate quasi laboriosam praesentium minima vitae veniam culpa fugit modi quae laudantium odit explicabo aliquam est iste! Itaque fugiat, animi maxime cumque numquam rerum porro magnam tempore.
+    <section class="flex flex-col bg-about items-center bg-center bg-cover xl:items-end">
+      <div
+        class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7 xl:w-[40%] xl:mr-10 2xl:mr-[130px]"
+      >
+        <h2 class="text-primary-white-light text-[37px] font-heading">
+          Ligual Mattis Ornare Ultricies
+        </h2>
+        <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
+        <p class="text-[20px]">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus
+          officiis asperiores enim recusandae delectus, mollitia animi deserunt
+          natus quaerat aliquid?
         </p>
-        <p class="mt-5 md:text-[20px]">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, repellendus hic reprehenderit, dolore cupiditate quasi laboriosam praesentium minima vitae veniam culpa fugit modi quae laudantium odit explicabo aliquam est iste! Itaque fugiat, animi maxime cumque numquam rerum porro magnam tempore.
-        </p>
-        <a href="#" class="bg-primary-pink text-primary-white w-[163px] p-4 text-[20px] mt-5">
-            <div class="flex flex-row gap-2">
-                <p>Take a Look</p>
-                <img src="./images/deconnexion.png" alt="#" class="w-[20px]">
-            </div>
-        </a>
-        <img src="./images/1200.jpeg" alt="#">
-    </section>
-
-    <!-- History Section  -->
-    <section class="flex flex-col bg-history items-center mt-[30px]">
-        <div class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7">
-            <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
-            <p class="text-[20px]">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus officiis asperiores enim recusandae delectus, mollitia animi deserunt natus quaerat aliquid?
-            </p>
-            <p class="text-[20px]">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus officiis asperiores enim recusandae delectus, mollitia animi deserunt natus quaerat aliquid?
-            </p>
-            <p class="text-[20px]">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus officiis asperiores enim recusandae delectus, mollitia animi deserunt natus quaerat aliquid?
-            </p>
+        <div class="flex flex-col items-center">
+          <div
+            class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px]"
+          >
+            <h3>Ultricies</h3>
+            <p>23,578</p>
+          </div>
         </div>
-    </section>
-
-    <!-- Photos Section -->
-    <section class="flex flex-col bg-gray-300 pt-[50px] gap-3 pb-11 md:hidden">
-      <img src="./images/300.jpeg" alt="#">
-      <img src="./images/776.jpeg" alt="#">
-      <img src="./images/800.jpeg" alt="#">
-      <img src="./images/400.jpeg" alt="#">
-      <img src="./images/2476.jpeg" alt="#">
-      <img src="./images/439.jpeg" alt="#">
-      <img src="./images/140.jpeg" alt="#">
-    </section>
-
-    <section class="md:flex bg-gray-300 md:pt-[60px] md:pb-[100px] max-md:hidden md:gap-5 md:justify-center">
-      <div class="flex flex-row justify-center gap-5">
-        <div  class="flex flex-col w-[30%] gap-4">
-          <img src="./images/300.jpeg" alt="#">
-          <img src="./images/400.jpeg" alt="#">
-          <img src="./images/2476.jpeg" alt="#">
-          <img src="./images/140.jpeg" alt="#">
-        </div>
-        <div class="flex flex-col w-[30%]">
-          <img src="./images/776.jpeg" alt="#" class="h-full"> 
-        </div>
-        <div class="flex flex-col w-[30%] gap-4">
-          <img src="./images/800.jpeg" alt="#" class="h-[70%]">
-          <img src="./images/439.jpeg" alt="#" class="h-[30%]">
+        <div class="flex flex-col items-center">
+          <div
+            class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px]"
+          >
+            <h3>Fermentum</h3>
+            <p>12,702</p>
+          </div>
         </div>
       </div>
     </section>
 
-     <!-- Partenaires Section -->
-      <section class="p-3 md:p-5 md:mt-10">
-        <img src="./images/logo-sample-01.jpg" alt="#" class="w-[100%] md:w-[40%]">
-        <img src="./images/logo-sample-02.jpg" alt="#" class="w-[100%]">
-        <img src="./images/logo-sample-03.png" alt="#" class="w-[100%]">
-        <img src="./images/logo-sample-04.jpg" alt="#" class="w-[100%] md:w-[40%]">
-        <img src="./images/logo-sample-05.jpg" alt="#" class="w-[100%]">
-        <img src="./images/logo-sample-06.png" alt="#" class="w-[100%] md:w-[40%]">
-      </section>
+    <!-- Blog Section  -->
+     
+    <section class="flex flex-col bg-primary-white p-4 text-primary-gray mt-10 xl:flex-row xl:px-[150px] xl:gap-[5%]">
+      <div class="flex flex-col xl:w-[57%] ">
+        <h2 class="text-[35px] font-heading md:text-[40px]">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </h2>
+        <p class="mt-5 md:text-[20px]">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+          repellendus hic reprehenderit, dolore cupiditate quasi laboriosam
+          praesentium minima vitae veniam culpa fugit modi quae laudantium odit
+          explicabo aliquam est iste! Itaque fugiat, animi maxime cumque numquam
+          rerum porro magnam tempore.
+        </p>
+        <p class="mt-5 md:text-[20px]">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+          repellendus hic reprehenderit, dolore cupiditate quasi laboriosam
+          praesentium minima vitae veniam culpa fugit modi quae laudantium odit
+          explicabo aliquam est iste! Itaque fugiat, animi maxime cumque numquam
+          rerum porro magnam tempore.
+        </p>
+        <a
+          href="#"
+          class="bg-primary-pink text-primary-white w-[163px] p-4 text-[20px] mt-5"
+        >
+          <div class="flex flex-row gap-2">
+            <p>Take a Look</p>
+            <img src="./images/deconnexion.png" alt="#" class="w-[20px]" />
+          </div>
+        </a>
+      </div>
+      <div class="xl:w-[38%] xl:flex xl:flex-row items-start">
+        <img src="./images/1200.jpeg" alt="#"/>
+      </div>
+    </section>
+
+    <!-- History Section  -->
+    <section class="flex flex-col bg-history items-center bg-center bg-cover mt-[30px]">
+      <div
+        class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7"
+      >
+        <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
+        <p class="text-[20px]">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus
+          officiis asperiores enim recusandae delectus, mollitia animi deserunt
+          natus quaerat aliquid?
+        </p>
+        <p class="text-[20px]">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus
+          officiis asperiores enim recusandae delectus, mollitia animi deserunt
+          natus quaerat aliquid?
+        </p>
+        <p class="text-[20px]">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus
+          officiis asperiores enim recusandae delectus, mollitia animi deserunt
+          natus quaerat aliquid?
+        </p>
+      </div>
+    </section>
+
+    <!-- Photos Section -->
+    <section class="flex flex-col bg-gray-300 pt-[50px] gap-3 pb-11 md:hidden">
+      <img src="./images/300.jpeg" alt="#" />
+      <img src="./images/776.jpeg" alt="#" />
+      <img src="./images/800.jpeg" alt="#" />
+      <img src="./images/400.jpeg" alt="#" />
+      <img src="./images/2476.jpeg" alt="#" />
+      <img src="./images/439.jpeg" alt="#" />
+      <img src="./images/140.jpeg" alt="#" />
+    </section>
+
+    <section
+      class="md:flex bg-gray-300 md:pt-[60px] md:pb-[100px] max-md:hidden md:gap-5 md:justify-center xl:hidden"
+    >
+      <div class="flex flex-row justify-center gap-5">
+        <div class="flex flex-col w-[30%] gap-4">
+          <img src="./images/300.jpeg" alt="#" />
+          <img src="./images/400.jpeg" alt="#" />
+          <img src="./images/2476.jpeg" alt="#" />
+          <img src="./images/140.jpeg" alt="#" />
+        </div>
+        <div class="flex flex-col w-[30%]">
+          <img src="./images/776.jpeg" alt="#" class="h-full" />
+        </div>
+        <div class="flex flex-col w-[30%] gap-4">
+          <img src="./images/800.jpeg" alt="#" class="h-[70%]" />
+          <img src="./images/439.jpeg" alt="#" class="h-[30%]" />
+        </div>
+      </div>
+    </section>
+
+    <section class="flex flex-col bg-gray-300 items-center">
+      <div class="xl:flex flex-row max-xl:hidden xl:pt-[60px] xl:pb-[100px]  xl:gap-5 xl:justify-center w-[75%]">
+        <div class="flex flex-col xl:gap-5 xl:w-[66%]">
+          <img src="./images/300.jpeg" alt="#" />
+          <div class="flex flex-row xl:gap-5">
+            <div class="xl:w-[50%]">
+              <img src="./images/800.jpeg" alt="#" class="h-[100%]"/>
+            </div>
+            <div class="flex flex-col xl:w-[50%] gap-5">
+              <img src="./images/400.jpeg" alt="#" />
+              <img src="./images/2476.jpeg" alt="#" />
+            </div>
+          </div>
+          <img src="./images/140.jpeg" alt="#" class="h-full" />
+        </div>
+        <div class="flex flex-col xl:w-[33%] gap-5">
+          <img src="./images/776.jpeg" alt="#" class="xl:h-4/5"/>
+          <img src="./images/439.jpeg" alt="#" class="xl:h-1/5"/>
+        </div>
+      </div>
+    </section>
+    <!-- Partenaires Section -->
+    <section class="flex flex-col xl:items-center">
+      <div class="p-3 md:p-5 md:mt-10 flex flex-col xl:flex-row xl:w-[80%]">
+        <img
+          src="./images/logo-sample-01.jpg"
+          alt="#"
+          class="w-[100%] md:w-[40%] xl:w-[17%] xl:h-[20%]"
+        />
+        <img src="./images/logo-sample-02.jpg" alt="#" class="w-[100%] xl:w-[17%] xl:h-[20%]" />
+        <img src="./images/logo-sample-03.png" alt="#" class="w-[100%] xl:w-[17%] xl:h-[20%]" />
+        <img
+          src="./images/logo-sample-04.jpg"
+          alt="#"
+          class="w-[100%] md:w-[40%] xl:w-[17%] xl:h-[20%]"
+        />
+        <img src="./images/logo-sample-05.jpg" alt="#" class="w-[100%] xl:w-[17%] xl:h-[20%]" />
+        <img
+          src="./images/logo-sample-06.png"
+          alt="#"
+          class="w-[100%] md:w-[40%] xl:w-[17%] xl:h-[20%]"
+        />
+      </div>
+    </section>
   </body>
 </html>
