ADD: Responsive Desktop

--- a/index.html
+++ b/index.html
@@ -109,33 +109,37 @@
       </div>
     </section>
     <!-- About Section  -->
-    <section class="flex flex-col bg-about items-center bg-center bg-cover xl:items-end">
-      <div
-        class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7 xl:w-[40%] xl:mr-10 2xl:mr-[130px]"
-      >
-        <h2 class="text-primary-white-light text-[37px] font-heading">
-          Ligual Mattis Ornare Ultricies
-        </h2>
-        <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
-        <p class="text-[20px]">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus
-          officiis asperiores enim recusandae delectus, mollitia animi deserunt
-          natus quaerat aliquid?
-        </p>
-        <div class="flex flex-col items-center">
-          <div
-            class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px]"
-          >
-            <h3>Ultricies</h3>
-            <p>23,578</p>
-          </div>
-        </div>
-        <div class="flex flex-col items-center">
-          <div
-            class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px]"
-          >
-            <h3>Fermentum</h3>
-            <p>12,702</p>
+    <section class="flex flex-col bg-about bg-center bg-cover xl:items-end">
+      <div class="flex flex-col items-center xl:items-end xl:w-[80%]">
+        <div
+          class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7 xl:w-[40%] xl:mr-10 2xl:mr-[130px]"
+        >
+          <h2 class="text-primary-white-light text-[37px] font-heading">
+            Ligual Mattis Ornare Ultricies
+          </h2>
+          <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
+          <p class="text-[20px]">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus
+            officiis asperiores enim recusandae delectus, mollitia animi deserunt
+            natus quaerat aliquid?
+          </p>
+          <div class="flex flex-col gap-5 xl:flex-row xl:justify-center xl:justify-between">
+            <div class="flex flex-col items-center xl:w-[30%]">
+              <div
+                class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px] xl:w-[100%]"
+              >
+                <h3>Ultricies</h3>
+                <p>23,578</p>
+              </div>
+            </div>
+            <div class="flex flex-col items-center xl:w-[30%]">
+              <div
+                class="flex flex-col w-[60%] border items-center gap-10 py-10 text-[30px] xl:w-[100%]"
+              >
+                <h3>Fermentum</h3>
+                <p>12,702</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -178,9 +182,9 @@
     </section>
 
     <!-- History Section  -->
-    <section class="flex flex-col bg-history items-center bg-center bg-cover mt-[30px]">
+    <section class="flex flex-col bg-history items-center bg-center bg-cover mt-[30px] xl:items-start">
       <div
-        class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7"
+        class="w-[90%] flex flex-col bg-primary-blue-light py-11 px-5 bg-opacity-60 text-primary-white-light gap-7 xl:w-[40%] xl:ml-[90px]"
       >
         <p class="text-[25px]">Pellentesque Cursus Amet Parturient Etiam</p>
         <p class="text-[20px]">
